# parsery

./: .gitignore  1076-2019.txt  CMakeLists.txt  README.md  main.cpp  test.vhd  vhdl_parser.kdev4
examples/: main.cpp
src/: lang.txt  parser.cpp  parser.h  tmp
src/backend/: call_stack.cpp  call_stack.h  node_stack.cpp  node_stack.h
src/frontend/: rule_importer.cpp  rule_importer.h  syntax_converter.cpp  syntax_converter.h  syntax_element.cpp  syntax_element.h  syntax_generator.cpp  syntax_generator.h
src/graph/: generic_node.h  node.h  type_union.h
src/parser/: graph_node.h  node.cpp  node.h  node_converter.cpp  node_converter.h  node_generator.cpp  node_generator.h  parse_graph.h  parse_stack.cpp  parse_stack.h  parser.cpp  parser.h  type_union.h
